--- a/apps/ledger-live-mobile/src/locales/es/common.json
+++ b/apps/ledger-live-mobile/src/locales/es/common.json
@@ -831,6 +831,13 @@
       "modalButtonLabelBase" : "Autorizar",
       "modalButtonLabelSettingsVariant" : "Ir a Ajustes",
       "dontPair" : "No emparejar"
+    },
+    "camera" : {
+      "title" : "Autorizar cámara",
+      "authorizeDescription" : "Autoriza la cámara para escanear códigos QR.",
+      "authorizeButtonTitle" : "Autorizar",
+      "goToSettingsDescription" : "Autoriza los Ajustes de la cámara para escanear códigos QR.",
+      "goToSettingsButtonTitle" : "Ir a Ajustes"
     }
   },
   "fees" : {
@@ -1115,6 +1122,12 @@
     "mostPopular" : "LO MÁS POPULAR"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "¿Quieres instalar las mismas aplicaciones que tenías en el {{deviceName}}?",
+      "titleNoDeviceName" : "¿Quieres instalar las mismas aplicaciones que tenías en tu dispositivo Ledger anterior?",
+      "installCTA" : "Instalar ahora",
+      "skipCTA" : "Lo haré más tarde"
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} min",
       "title" : "El {{ productName }} usa aplicaciones para posibilitar transacciones seguras en la cadena de bloques",
@@ -1126,7 +1139,7 @@
       "loading" : "Cargando...",
       "resolving" : "Resolviendo dependencias",
       "progress" : "Instalando aplicaciones: {{progress}} %",
-      "disclaimer" : "Las aplicaciones el {{ productName }} se usan para aprobar transacciones. Puedes añadirlas o eliminarlas cuando quieras."
+      "disclaimer" : "Agrega o elimina aplicaciones en cualquier momento desde Ledger Live."
     }
   },
   "onboarding" : {
@@ -1623,6 +1636,10 @@
             "label" : "Comprueba si detecta tu Nano X."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "¿Por qué no puedo conectar mi Ledger?",
+        "description" : "Si tienes problemas para conectarte a Ledger Live Mobile después de activar el Bluetooth en tu Ledger, puedes seguir las instrucciones pulsando el botón \"Cómo resolverlo\" a continuación"
       }
     },
     "stepImportAccounts" : {
@@ -2272,12 +2289,6 @@
         "unsupported" : "No compatible",
         "settings" : "Ajustes de aplicación",
         "includeGeneralSettings" : "Importar configuración de Desktop"
-      },
-      "fallback" : {
-        "header" : "Importar cuenta",
-        "title" : "Habilitar cámara",
-        "desc" : "Dentro de Ajustes, habilita la cámara para escanear códigos QR.",
-        "buttonTitle" : "Ir a Ajustes"
       }
     },
     "availableBalance" : "Saldo disponible",
@@ -3085,7 +3096,7 @@
       "actionTitle" : "Prestar",
       "accountActions" : {
         "approve" : "Aprobar",
-        "supply" : "Suministrar",
+        "supply" : "Suministro",
         "withdraw" : "Retirar"
       },
       "highFees" : {
@@ -3129,7 +3140,7 @@
           "INACTIVE" : "Inactivo",
           "SUPPLYING" : "Suministrando",
           "approve" : "Aprobar",
-          "supply" : "Suministrar",
+          "supply" : "Suministro",
           "withdraw" : "Retirar",
           "amountRedeemed" : "Importe retirado",
           "endDate" : "Fecha de finalización"
@@ -3231,7 +3242,7 @@
       },
       "supply" : {
         "stepperHeader" : {
-          "amount" : "Suministrar",
+          "amount" : "Suministro",
           "summary" : "Resumen",
           "selectDevice" : "Seleccionar dispositivo",
           "connectDevice" : "Conectar dispositivo",
@@ -3622,7 +3633,7 @@
       "title" : "Confirma la operación de permuta en tu dispositivo",
       "alert" : {
         "default" : "Verifica los detalles de la permuta en tu dispositivo antes de enviarla. Las direcciones se intercambian de forma segura por lo que no es necesario verificarlas.",
-        "cic" : "Verifica la información de permuta en tu dispositivo antes de enviarlo. CIC tal vez requiera una verificación adicional para algunas transacciones, lo que puede provocar retrasos."
+        "provider" : "Verifica la información de permuta en tu dispositivo antes de enviar la transacción. {{providerName}} tal vez requiera una verificación adicional para algunas transacciones, lo que puede provocar retrasos."
       },
       "acceptTerms" : "Al validar esta transacción, acepto los <0>términos de uso de\n<0> {{provider}}</0>",
       "notice" : "Verifica los detalles de la permuta en tu dispositivo antes de enviarla. Las direcciones se intercambian de forma segura por lo que no es necesario verificarlas."
@@ -5568,7 +5579,7 @@
       "allTimeLow" : "Mínimo histórico",
       "marketCapRank" : "Posición según capitalización de mercado",
       "marketCapDominance" : "Dominio de capitalización de mercado",
-      "supply" : "Suministrar",
+      "supply" : "Suministro",
       "circulatingSupply" : "Suministro circulante",
       "totalSupply" : "Suministro total",
       "maxSupply" : "Suministro máximo",
